--- a/index.html
+++ b/index.html
@@ -5,11 +5,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>JS Crash Course</h1>
+        <h1>Console</h1>
     </header>
+
+    <section calss="container">
+        <form id="my-form">
+            <h1>Please Login</h1>
+            <div class="msg"></div>
+            <div>
+                <label for="name">Name:</label>
+                <input type="text" id="name">
+            </div>
+            <div>
+                <label for="email">Email:</label>
+                <input type="text" id="email">
+            </div>
+            <input type="submit" class="btn" value="Submit">
+        </form>
+
+        <ul id="users"></ul>
+        <!-- <ul class="items">
+        <li class="item">Item 1</li>
+        <li class="item">Item 2</li>
+        <li class="item">Item 3</li>
+      </ul> -->
+    </section>
 
     <script src="main.js"></script>
 </body>
