--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <h1>Console</h1>
     </header>
 
-    <section calss="container">
+    <section class="container">
         <form id="my-form">
-            <h1>Please Login</h1>
+            <h2>Please Login</h2>
             <div class="msg"></div>
             <div>
                 <label for="name">Name:</label>
